code25_all/scala/2911562.txt
sealed trait Op
case class Push(value: Int) extends Op
case class Pop() extends Op
scala> case class Foo()
defined class Foo

scala> Foo().copy()
<console>:8: error: value copy is not a member of Foo
       Foo().copy()
             ^

scala> case class Foo(x: Int)
defined class Foo

scala> Foo(0).copy()
res1: Foo = Foo(0)

def ops: List[Op]
ops map { _.copy() }
Op
def copy(): Op
def clone(): Op
def clone() = copy()
